# galatea

./: .gitignore  README.md  galatea.toml  pyproject.toml
assets/character/: SETUP.md
scripts/: blender_convert.py
src/galatea/: __init__.py  config.py  main.py  pipeline.py  state.py
src/galatea/audio/: capture.py  playback.py
src/galatea/character/: lipsync.py  window.py
src/galatea/llm/: ollama.py
src/galatea/stt/: engine.py
src/galatea/tts/: engine.py
