[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "galatea"
version = "0.1.0"
description = "A desktop AI character you can talk to"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "faster-whisper>=1.0.0",
    "httpx>=0.27.0",
    "edge-tts>=6.1.9",
    "panda3d>=1.10.16",
    "panda3d-gltf>=1.3.0",
]

[project.scripts]
galatea = "galatea.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/galatea"]
